# wirerust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: filter_bench.rs
examples/: basic.rs
scripts/: bump-version.sh
src/: compiler.rs  context.rs  expr.rs  filter.rs  functions.rs  ir.rs  lib.rs  schema.rs  types.rs
tests/: integration.proptest-regressions  integration.rs
