[package]
name = "wirerust"
version = "0.1.0"
edition = "2025"
authors = ["pyrowall"]
description = "A modular, embeddable filter engine for structured data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyrowall/wirerust"
keywords = ["filter", "engine", "query", "parser", "compiler"]
categories = ["parsing", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = { version = "1.0", optional = true }

[features]
default = []
regex = ["dep:regex"]

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "filter_bench"
harness = false
